objects/Step_Forward_Activity__c.object
<CustomObject>
    <description>Associate (Young Person) Activities related to Step Forward</description>
    <fields>
        <fullName>AS_Level_A_Asterisk__c</fullName>
        <label>AS Level A*</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Level_A__c</fullName>
        <label>AS Level A</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Level_B__c</fullName>
        <label>AS Level B</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Level_C__c</fullName>
        <label>AS Level C</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Level_D__c</fullName>
        <label>AS Level D</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Level_E__c</fullName>
        <label>AS Level E</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Level_N__c</fullName>
        <label>AS Level N</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Level_U__c</fullName>
        <label>AS Level U</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Level_status__c</fullName>
        <label>AS Level: status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Predicted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Level_A_Asterisk__c</fullName>
        <label>A Level A*</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Level_A__c</fullName>
        <label>A Level A</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>